Was defined structure and added the variables for use

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div class="container">
 
         <form class="form">
+            <div class="form__heading">
+                <h1 class="form__title">Create an account</h1>
+                <p class="form__legend">It's free forever, do not wait more</p>
+            </div>
             <div class="form__section">
                 <label for="" class="form__label">Username</label>
                 <div class="form__input">
