Was added styles to inputs and form heading

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <div class="form__section">
                 <label for="" class="form__label">Username</label>
                 <div class="form__input">
-                    <input type="text" class="form__control" placeholder="user1202">
+                    <input type="text" class="form__control">
                     <i class='bx bx-check'></i>
                     <i class='bx bx-x'></i>
                 </div>
             </div>
             <div class="form__section">
-                <label for="" class="form__label">name</label>
+                <label for="" class="form__label">Name</label>
                 <div class="form__input">
-                    <input type="text" class="form__control" placeholder="Jhon Doe">
+                    <input type="text" class="form__control">
                     <i class='bx bx-check'></i>
                     <i class='bx bx-x'></i>
                 </div>
@@ -39,7 +39,7 @@
             <div class="form__section">
                 <label for="" class="form__label">Email</label>
                 <div class="form__input">
-                    <input type="email" class="form__control" placeholder="jhondoe@example.com">
+                    <input type="email" class="form__control">
                     <i class='bx bx-check'></i>
                     <i class='bx bx-x'></i>
                 </div>
@@ -47,7 +47,7 @@
             <div class="form__section">
                 <label for="" class="form__label">Phone</label>
                 <div class="form__input">
-                    <input type="number" class="form__control" placeholder="301 001 2300">
+                    <input type="text" class="form__control">
                     <i class='bx bx-check'></i>
                     <i class='bx bx-x'></i>
                 </div>
@@ -63,7 +63,7 @@
             <div class="form__section">
                 <label for="" class="form__label">Repeat password</label>
                 <div class="form__input">
-                    <input type="password" class="form__control" placeholder="Jhon Doe">
+                    <input type="password" class="form__control">
                     <i class='bx bx-check'></i>
                     <i class='bx bx-x'></i>
                 </div>
