Added some end styles to the form and added responsive design

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <i class='bx bx-x'></i>
                 </div>
             </div>
-            <div class="form__action">
-                <p class="form__legend">Already have an account? <a href="#">Sing in</a></p>
-                <button class="form__button">Sing up</button>
+            <div class="form__actions">
+                <p class="form__legend">Already have an account? <a href="#">Sign in</a></p>
+                <button class="form__button">Sign up</button>
             </div>
         </form>
 
